# IronCalc

./: Cargo.toml
base/src/: data_table.rs  lib.rs  model.rs  new_empty.rs  types.rs
base/src/test/: mod.rs  test_data_table.rs  test_iterative_calculation.rs
base/src/test/user_model/: mod.rs  test_data_table.rs
base/src/user_model/: data_table.rs  history.rs  mod.rs  undo_redo.rs
bindings/nodejs/src/: user_model.rs
bindings/python/src/: lib.rs  types.rs
bindings/wasm/: types.ts
bindings/wasm/src/: lib.rs
docs/: data_tables.md
docs/data-tables/: 01-understanding-and-usage.md  02-implementation-design.md  03-iterative-calculation-design.md
docs/plans/: 2026-06-27-001-feat-data-tables-plan.md  2026-06-27-002-feat-iterative-calculation-seed.md
docs/src/.vitepress/: config.mts
docs/src/features/: data-tables.md
lotus/: Cargo.toml  build.rs
lotus/src/: error.rs  lib.rs
lotus/src/import/: encoding.rs  formula.rs  mod.rs  record.rs  style.rs  tokens.rs
lotus/tests/: generated.rs  smoke.rs  styling.rs
lotus/tests/wk3/: A_README.WK3  DATALENS.WK3  INC10S.WK3  INC11S.WK3  INC12S.WK3  INC2S.WK3  INC4S.WK3  INC5S.WK3  INC6S.WK3  INC7S.WK3  INC8S.WK3  INC9S.WK3  MULTISH.WK3  SALES.WK3  SAMPADNS.WK3  SUM1991S.WK3  YEARINC.WK3  YEARINC2.WK3
xlsx/src/export/: workbook.rs  worksheets.rs
xlsx/src/import/: mod.rs  workbook.rs  worksheets.rs
xlsx/tests/: test_data_table.rs  test_iterative_calculation.rs
